[metadata]
name = Flask-Beginner
version = 0.0.2
author = r1cardohj
description = a quick project directory maker for flask
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/r1cardohj/flask-beginner
keywords = flask extension development
test_suit = test
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
    flask

[options.entry_points]
console_scripts = 
    beginner = flask_beginner.beginner:run

[options.extras_require]
    all =
        flask-login
        flask-wtf
        flask-sqlalchemy
        Flask-Migrate
